# setlogging

./: .coverage  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  manual_test.py  package-lock.json  package.json  pyproject.toml  readme.md  release.config.js  setup.py
.github/workflows/: python-publish.yml
src/setlogging/: __init__.py  logger.py
tests/: __init__.py  manual_test.py  test_logger.py
