[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setlogging"
version = "0.1.0"
description = "A flexible logging utility with JSON support and timezone awareness"
authors = [
    { name = "Jie Yan", email = "kiki3890528@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JieYanTIBCO/setlogging"
