[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setlogging"
version = "0.2.0"
description = "A flexible logging utility with JSON support and timezone awareness"
authors = [
    { name = "Jie Yan", email = "kiki3890528@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/JieYanTIBCO/setlogging"

[tool.hatch.build]
# Provide a list of string paths for packages, rather than dictionaries
packages = [
  "src/setlogging"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
# Include necessary files for the source distribution
include = [
    "src/setlogging/**",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
# Include necessary files for the wheel
include = [
    "src/setlogging/**",
    "README.md",
    "LICENSE",
]

[tool.hatch.version]
path = "src/setlogging/__init__.py"
pattern = "__version__ = \"{version}\""
