[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setlogging"
version = "0..0"
description = "A flexible logging utility with JSON support and timezone awareness"
authors = [
    { name = "Jie Yan", email = "kiki3890528@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []  # Add runtime dependencies here, if any

# Specify your package source structure
packages = [{ include = "setlogging", from = "src" }]

[project.urls]
Homepage = "https://github.com/JieYanTIBCO/setlogging"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
# Include all files required for source distribution
include = [
    "src/setlogging/**",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
# Include metadata for wheel
include = [
    "src/setlogging/**",
    "README.md",
    "LICENSE",
]

[tool.hatch.version]
path = "src/setlogging/__init__.py"
pattern = "__version__ = \"{version}\""
